Fixed 2 images not showing

--- a/source/scss/components/modules/work.scss
+++ b/source/scss/components/modules/work.scss
@@ -98,10 +98,10 @@
       background-image: url('/public/img/dresses3.jpg');
     }
     .card-one {
-      background-image: url('/public/img/dresses1.jpeg');
+      background-image: url('/public/img/dresses1.jpg');
     }
     .card-two {
-      background-image: url('/public/img/dresses2.jpeg');
+      background-image: url('/public/img/dresses2.jpg');
     }
     .card-bottom {
       background-image: url('/public/img/dresses3.jpg');
